--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Stereotype Creation">
-<meta name="author" content="Stereotype">
+<meta name="description" content="Créations de graphisme textiles, illustrations et peintures">
+<meta name="author" content="Stereotype Creation - Sabrina Quindroit">
 <title>Stereotype Création</title>
 <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
 <link href="https://sabrinaquindroit.github.io/stereotypecreation.fr/css/bootstrap.min.css" rel="stylesheet">
