--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Créations de graphisme textiles, illustrations et peintures">
-<meta name="author" content="Stereotype Creation - Sabrina Quindroit">
+<meta name="author" content="Sabrina Quindroit">
 <title>Stereotype Creation - Sabrina Quindroit</title>
 <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
 <link href="http://stereotypecreation.fr/css/bootstrap.min.css" rel="stylesheet">
