--- a/public/fr/graphisme-textile/index.html
+++ b/public/fr/graphisme-textile/index.html
@@ -1,20 +1,19 @@
 
 
 
+
+
 <!DOCTYPE html>
-<html lang="fr-FR">
+<html lang="en-US">
 <head>
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Créations de graphisme textiles, illustrations et peintures">
+<meta name="description" content="">
 <meta name="author" content="Sabrina Quindroit">
-<title>Stereotype Creation - Sabrina Quindroit</title>
-<!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+<title>Graphisme Textile</title>
 <link href="http://stereotypecreation.fr/css/bootstrap.min.css" rel="stylesheet">
-<!-- Custom CSS -->
 <link href="http://stereotypecreation.fr/css/freelancer.css" rel="stylesheet">
-
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,9 +21,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
-<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
 
-    <script src="http://stereotypecreation.fr/js/jquery.excoloSlider.min.js"></script>
     <link href="http://stereotypecreation.fr/css/jquery.excoloSlider.css" rel="stylesheet">
 </head>
 <body id="page-top" class="index">
@@ -63,24 +60,40 @@
 
             <div class="row">
                 <div class="col-lg-12 text-left"><br><br><br>
-                    <b><a href="http://stereotypecreation.fr/">&lt; Retour</a></b>
+                    <b><a href="http://stereotypecreation.fr/fr/">&lt; Retour</a></b>
                 </div>
             </div>
 
         </div>
 
 
+</section>
+
+
+<script src="//code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+<script src="http://stereotypecreation.fr/js/bootstrap.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="http://stereotypecreation.fr/js/classie.js"></script>
+<script src="http://stereotypecreation.fr/js/cbpAnimatedHeader.js"></script>
+<script src="http://stereotypecreation.fr/js/jqBootstrapValidation.js"></script>
+<script src="http://stereotypecreation.fr/js/contact_me.js"></script>
+<script src="http://stereotypecreation.fr/js/freelancer.js"></script>
+
+
+<script src="http://stereotypecreation.fr/js/jquery.excoloSlider.min.js"></script>
+
 <script>
 
     $(document).ready(function () {
+
         $("#slider").excoloSlider({
-            interval: 5000, 
+            interval: 5000,
             playReverse: true,
             width: '600',
             hight: '600'
         });
-    });
 
+    });
 </script>
-</section>
 </body>
+</html>
