set contact lang fr.

--- a/fr/index.html
+++ b/fr/index.html
@@ -168,14 +168,14 @@
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Nom</label>
-                            <input type="text" name="name" class="form-control" placeholder="Nom" id="name" required data-validation-required-message="Please enter your name.">
+                            <input type="text" name="name" class="form-control" placeholder="Nom" id="name" required data-validation-required-message="Merci de saisir votre nom.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Email</label>
-                            <input type="email" name="_replyto" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Please enter your email address.">
+                            <input type="email" name="_replyto" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Merci de saisir votre adress email">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Message</label>
-                            <textarea rows="5" name="message" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                            <textarea rows="5" name="message" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Merci de saisir un message."></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
