--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://stereotypecreation.fr/fr" />
+<meta http-equiv="refresh" content="0; url=http://stereotypecreation.fr/fr/" />
