--- a/en/paintings/index.html
+++ b/en/paintings/index.html
@@ -1,10 +1,8 @@
 
 
 
-
-
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 <head>
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,20 +13,15 @@
 <link href="http://stereotypecreation.fr/css/bootstrap.min.css" rel="stylesheet">
 <link href="http://stereotypecreation.fr/css/freelancer.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
-
     <link href="http://stereotypecreation.fr/css/jquery.excoloSlider.css" rel="stylesheet">
 </head>
 <body id="page-top" class="index">
 <section id="main">
-
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-12 text-right"><br><br><br>
                     <h2 id="title" style="font-weight: 700;">Paintings</h2>
@@ -81,42 +74,26 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12 text-left"><br><br><br>
                     <b><a href="http://stereotypecreation.fr/en/">&lt; Retour</a></b>
                 </div>
             </div>
-
         </div>
-
-
 </section>
 
-
-<script src="//code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-<script src="http://stereotypecreation.fr/js/bootstrap.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="http://stereotypecreation.fr/js/classie.js"></script>
-<script src="http://stereotypecreation.fr/js/cbpAnimatedHeader.js"></script>
-<script src="http://stereotypecreation.fr/js/jqBootstrapValidation.js"></script>
-<script src="http://stereotypecreation.fr/js/contact_me.js"></script>
-<script src="http://stereotypecreation.fr/js/freelancer.js"></script>
-
+<script src="//code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+<script src="http://stereotypecreation.fr/js/combined.min.js"></script>
 
 <script src="http://stereotypecreation.fr/js/jquery.excoloSlider.min.js"></script>
-
 <script>
-
     $(document).ready(function () {
-
         $("#slider").excoloSlider({
             interval: 5000,
             playReverse: true,
             width: '600',
             hight: '600'
         });
-
     });
 </script>
 </body>
